--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ regex = "1.11.1"
 fuzzy-matcher = "0.3.7"
 uuid = { version = "1.13.2", features = ["v4"] }
 sorted-vec = "0.8.6"
+chrono = "0.4.39"
 
