--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-isbn = "0.2.0"
+isbn = "0.4.0"
 clap = { version = "4.0", features = ["derive"] }
 levenshtein = "1.0.5"
 regex = "1.11.1"
@@ -14,4 +14,9 @@ fuzzy-matcher = "0.3.7"
 uuid = { version = "1.13.2", features = ["v4"] }
 sorted-vec = "0.8.6"
 chrono = "0.4.39"
+reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored",
+"blocking"] }
+json = "0.12.4"
+tokio = "1.43.0"
+serde_json = "1.0.139"
 
