--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,13 @@ clap = { version = "4.0", features = ["derive"] }
 levenshtein = "1.0.5"
 regex = "1.11.1"
 fuzzy-matcher = "0.3.7"
-uuid = { version = "1.13.2", features = ["v4"] }
 sorted-vec = "0.8.6"
 chrono = "0.4.39"
-reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored",
-"blocking"] }
+reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
 json = "0.12.4"
 tokio = "1.43.0"
 serde_json = "1.0.139"
-rocket = "0.5.1"
 serde = "1.0.218"
+rocket = "0.5.1"
+rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
 
