--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,11 @@ sorted-vec = "0.8.6"
 chrono = "0.4.39"
 reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
 json = "0.12.4"
-tokio = "1.43.0"
 serde_json = "1.0.139"
 serde = "1.0.218"
-rocket = "0.5.1"
-rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
+actix-web = "4"
 
 [dependencies.sqlx]
-version = "0.7.0"
+version = "0.8"
 default-features = false
-features = ["macros", "migrate"]
+features = ["macros", "migrate", "runtime-tokio", "tls-native-tls", "sqlite"]
