--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ json = "0.12.4"
 serde_json = "1.0.139"
 serde = "1.0.218"
 actix-web = "4"
+iso8601 = "0.6.2"
 
 [dependencies.sqlx]
 version = "0.8"
