--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,6 @@
-[package]
-name = "home-library-lib"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-isbn = "0.4.0"
-clap = { version = "4.0", features = ["derive"] }
-levenshtein = "1.0.5"
-regex = "1.11.1"
-fuzzy-matcher = "0.3.7"
-sorted-vec = "0.8.6"
-chrono = "0.4.39"
-reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
-json = "0.12.4"
-serde_json = "1.0.139"
-serde = "1.0.218"
-actix-web = "4"
-iso8601 = "0.6.2"
-
-[dependencies.sqlx]
-version = "0.8"
-default-features = false
-features = ["macros", "migrate", "chrono", "runtime-tokio", "tls-native-tls", "sqlite"]
+[workspace]
+members = [
+    "backend",
+    "frontend"
+]
+resolver = "2"
