--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+web-sys = "0.3.77"
+yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
+yew-router = "0.18.0"
