--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0.139"
 serde = "1.0.218"
 actix-web = "4"
 dotenv = "0.15.0"
+actix-cors = "0.7.1"
 
 [dependencies.sqlx]
 version = "0.8"
