--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@iconify-json/mingcute": "^1.2.3",
 		"@iconify/tailwind": "^1.2.0",
+		"@lucide/svelte": "^0.488.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -28,5 +29,8 @@
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.5"
+	},
+	"dependencies": {
+		"mode-watcher": "^1.0.1"
 	}
 }
