--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
 		"bits-ui": "^1.3.19",
 		"clsx": "^2.1.1",
 		"formsnap": "^2.0.1",
+		"mode-watcher": "^1.0.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^2.24.1",
 		"tailwind-merge": "^3.2.0",
 		"tailwind-variants": "^1.0.0",
@@ -34,7 +36,7 @@
 		"zod": "^3.24.3"
 	},
 	"dependencies": {
-		"chrono-node": "^2.8.0",
-		"mode-watcher": "^1.0.1"
+		"axios": "^1.9.0",
+		"chrono-node": "^2.8.0"
 	}
 }
