--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,8 +13,12 @@ serde = "1.0.218"
 actix-web = "4"
 dotenv = "0.15.0"
 actix-cors = "0.7.1"
+actix-files = "0.6.6"
+actix-multipart = "0.7.2"
+image = "0.25.6"
+time = { version = "0.3.41", features = ["serde"]}
 
 [dependencies.sqlx]
 version = "0.8"
 default-features = false
-features = ["macros", "migrate", "runtime-tokio", "tls-native-tls", "sqlite"]
+features = ["macros", "migrate", "runtime-tokio", "tls-native-tls", "sqlite", "time"]
