--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,8 +15,12 @@ dotenv = "0.15.0"
 actix-cors = "0.7.1"
 actix-files = "0.6.6"
 actix-multipart = "0.7.2"
+actix-session = { version = "0.10.1", features = ["cookie-session"]}
 image = "0.25.6"
 time = { version = "0.3.41", features = ["serde"]}
+rand = "0.9.1"
+sha2 = "0.10.9"
+argon2 = "0.5.3"
 
 [dependencies.sqlx]
 version = "0.8"
