--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,6 +21,8 @@ time = { version = "0.3.41", features = ["serde"]}
 rand = "0.9.1"
 sha2 = "0.10.9"
 argon2 = "0.5.3"
+log = "0.4.27"
+hex = "0.4.3"
 
 [dependencies.sqlx]
 version = "0.8"
