--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
 		"formsnap": "^2.0.1",
 		"mode-watcher": "^1.0.2",
 		"svelte": "^5.0.0",
+		"svelte-awesome-color-picker": "^4.0.2",
 		"svelte-check": "^4.0.0",
 		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^2.24.1",
@@ -39,6 +40,7 @@
 	"dependencies": {
 		"@internationalized/date": "^3.8.1",
 		"axios": "^1.9.0",
-		"chrono-node": "^2.8.0"
+		"chrono-node": "^2.8.0",
+		"dotenv": "^16.5.0"
 	}
 }
