--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"@internationalized/date": "^3.8.1",
 		"axios": "^1.9.0",
+		"browser-image-compression": "^2.0.2",
 		"chrono-node": "^2.8.0",
 		"dotenv": "^16.5.0"
 	}
