--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,6 +22,7 @@ argon2 = "0.5.3"
 log = "0.4.27"
 hex = "0.4.3"
 uuid = { version = "1.17.0", features = ["serde", "v4"]}
+sorted-vec = "0.8.6"
 
 [dependencies.sqlx]
 version = "0.8"
