--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,6 +23,7 @@ log = "0.4.27"
 hex = "0.4.3"
 uuid = { version = "1.17.0", features = ["serde", "v4"]}
 sorted-vec = "0.8.6"
+tokio = { version = "1.45.1", features = ["full"]}
 
 [dependencies.sqlx]
 version = "0.8"
