--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -24,6 +24,7 @@ hex = "0.4.3"
 uuid = { version = "1.17.0", features = ["serde", "v4"]}
 sorted-vec = "0.8.6"
 tokio = { version = "1.45.1", features = ["full"]}
+serde_with = "3.14.0"
 
 [dependencies.sqlx]
 version = "0.8"
